Added a button to send the image over Bluetooth and made a function that is triggered by the button click. Button currently just changes text to "Hello". Text for button (default) is in the string value file.

--- a/ConnectedRoboSketch/app/src/main/res/values/strings.xml
+++ b/ConnectedRoboSketch/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">ConnectedRoboSketch</string>
+    <string name="send_text">Send image</string>
 </resources>
